--- a/webapp/package.json
+++ b/webapp/package.json
@@ -9,7 +9,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "start:local": "ng serve --host 0.0.0.0 --proxy-config proxy.conf.json"
+    "start:local": "ng serve -e dev --host 0.0.0.0 --proxy-config proxy.conf.json"
   },
   "private": true,
   "dependencies": {
@@ -22,7 +22,7 @@
     "@angular/platform-browser": "^5.0.0",
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
-    "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.6",
+    "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.8",
     "awesome-bootstrap-checkbox": "^1.0.0",
     "bootstrap": "^4.0.0-beta.2",
     "core-js": "^2.4.1",
