--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -42,8 +42,8 @@
   name = "github.com/gin-contrib/location"
 
 [[constraint]]
+  branch = "master"
   name = "github.com/gin-gonic/gin"
-  version = "1.2.0"
 
 [[constraint]]
   name = "github.com/google/go-cmp"
