--- a/webapp/package.json
+++ b/webapp/package.json
@@ -13,48 +13,51 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.1.7",
-    "@angular/cdk": "^6.4.7",
-    "@angular/common": "^6.1.7",
-    "@angular/compiler": "^6.1.7",
-    "@angular/core": "^6.1.7",
-    "@angular/forms": "^6.1.7",
-    "@angular/http": "^6.1.7",
-    "@angular/material": "^6.4.7",
-    "@angular/platform-browser": "^6.1.7",
-    "@angular/platform-browser-dynamic": "^6.1.7",
-    "@angular/platform-server": "^6.1.7",
-    "@angular/router": "^6.1.7",
-    "@ng-bootstrap/ng-bootstrap": "^3.2.0",
-    "@schematics/angular": "^0.7.5",
-    "awesome-bootstrap-checkbox": "^1.0.0",
-    "bootstrap": "^4.1.3",
-    "core-js": "^2.4.1",
+    "@angular/animations": "^7.1.4",
+    "@angular/cdk": "^7.2.0",
+    "@angular/common": "^7.1.4",
+    "@angular/compiler": "^7.1.4",
+    "@angular/core": "^7.1.4",
+    "@angular/forms": "^7.1.4",
+    "@angular/http": "^7.1.4",
+    "@angular/material": "^7.2.0",
+    "@angular/platform-browser": "^7.1.4",
+    "@angular/platform-browser-dynamic": "^7.1.4",
+    "@angular/platform-server": "^7.1.4",
+    "@angular/router": "^7.1.4",
+    "@ng-bootstrap/ng-bootstrap": "^4.0.1",
+    "@schematics/angular": "^7.1.4",
+    "awesome-bootstrap-checkbox": "^1.0.1",
+    "bootstrap": "^4.2.1",
+    "core-js": "^2.6.1",
     "font-awesome": "^4.7.0",
-    "moment": "^2.20.0",
-    "rxjs": "^6.3.2",
+    "jquery": "^3.3.1",
+    "moment": "^2.23.0",
+    "popper.js": "^1.14.6",
+    "rxjs": "^6.3.3",
+    "webpack-dev-server": "^3.1.14",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.7.0",
-    "@angular/cli": "^6.1.3",
-    "@angular/compiler-cli": "^6.1.7",
-    "@angular/language-service": "^6.1.7",
-    "@types/jasmine": "~2.5.53",
-    "@types/jasminewd2": "~2.0.2",
-    "@types/node": "~6.0.60",
-    "codelyzer": "^4.4.4",
-    "jasmine-core": "~2.6.2",
-    "jasmine-spec-reporter": "~4.1.0",
-    "karma": "^3.0.0",
-    "karma-chrome-launcher": "~2.1.1",
-    "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^1.2.1",
-    "karma-jasmine": "~1.1.0",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "^5.4.0",
-    "ts-node": "~3.2.0",
-    "tslint": "~5.7.0",
-    "typescript": "^2.9.2"
+    "@angular-devkit/build-angular": "~0.11.4",
+    "@angular/cli": "^7.1.4",
+    "@angular/compiler-cli": "^7.1.4",
+    "@angular/language-service": "^7.1.4",
+    "@types/jasmine": "~3.3.5",
+    "@types/jasminewd2": "~2.0.6",
+    "@types/node": "~10.12.18",
+    "codelyzer": "^4.5.0",
+    "jasmine-core": "~3.3.0",
+    "jasmine-spec-reporter": "~4.2.1",
+    "karma": "^3.1.4",
+    "karma-chrome-launcher": "~2.2.0",
+    "karma-cli": "~2.0.0",
+    "karma-coverage-istanbul-reporter": "^2.0.4",
+    "karma-jasmine": "~2.0.1",
+    "karma-jasmine-html-reporter": "^1.4.0",
+    "protractor": "^5.4.2",
+    "ts-node": "~7.0.1",
+    "tslint": "~5.12.0",
+    "typescript": "3.1.6"
   }
 }
