--- a/webapp/package.json
+++ b/webapp/package.json
@@ -39,7 +39,7 @@
     "zone.js": "^0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.800.3",
+    "@angular-devkit/build-angular": "~0.802.0",
     "@angular/cli": "^8.0.3",
     "@angular/compiler-cli": "^8.0.2",
     "@angular/language-service": "^8.0.2",
@@ -58,6 +58,6 @@
     "protractor": "^5.4.2",
     "ts-node": "~7.0.1",
     "tslint": "~5.12.0",
-    "typescript": "3.4.5"
+    "typescript": "^3.4.5"
   }
 }
