--- a/webapp/package.json
+++ b/webapp/package.json
@@ -35,6 +35,7 @@
     "moment": "^2.23.0",
     "popper.js": "^1.14.6",
     "rxjs": "^6.5.3",
+    "tslib": "^1.11.1",
     "webpack-dev-server": "^3.7.2",
     "zone.js": "^0.9.1"
   },
