--- a/webapp/package.json
+++ b/webapp/package.json
@@ -19,23 +19,27 @@
     "@angular/compiler": "^9.0.6",
     "@angular/core": "^9.0.6",
     "@angular/forms": "^9.0.6",
+    "@angular/localize": "^9.0.6",
     "@angular/material": "^9.1.3",
     "@angular/platform-browser": "^9.0.6",
     "@angular/platform-browser-dynamic": "^9.0.6",
     "@angular/platform-server": "^9.0.6",
     "@angular/router": "^9.0.6",
-    "@ng-bootstrap/ng-bootstrap": "^5.3.0",
+    "@ng-bootstrap/ng-bootstrap": "^6.0.0",
     "@schematics/angular": "^7.1.4",
     "awesome-bootstrap-checkbox": "^1.0.1",
-    "bootstrap": "^4.3.1",
+    "bootstrap": "^4.4.1",
     "core-js": "^2.6.1",
     "font-awesome": "^4.7.0",
     "jquery": "^3.4.1",
+    "minimist": "^1.2.2",
     "moment": "^2.23.0",
     "popper.js": "^1.14.6",
     "rxjs": "^6.5.4",
     "tslib": "^1.10.0",
+    "url-parse": "^1.4.5",
     "webpack-dev-server": "^3.7.2",
+    "yargs-parser": "^13.1.2",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
@@ -49,7 +53,7 @@
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.3.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^4.1.0",
+    "karma": "^4.4.1",
     "karma-chrome-launcher": "~2.2.0",
     "karma-cli": "~2.0.0",
     "karma-coverage-istanbul-reporter": "^2.0.4",
