--- a/webapp/package.json
+++ b/webapp/package.json
@@ -26,19 +26,19 @@
     "@angular/platform-server": "^9.0.6",
     "@angular/router": "^9.0.6",
     "@ng-bootstrap/ng-bootstrap": "^6.0.0",
-    "@schematics/angular": "^7.1.4",
+    "@schematics/angular": "^7.3.9",
     "awesome-bootstrap-checkbox": "^1.0.1",
     "bootstrap": "^4.4.1",
-    "core-js": "^2.6.1",
+    "core-js": "^2.6.11",
     "font-awesome": "^4.7.0",
     "jquery": "^3.4.1",
-    "minimist": "^1.2.2",
-    "moment": "^2.23.0",
-    "popper.js": "^1.14.6",
+    "minimist": "^1.2.5",
+    "moment": "^2.24.0",
+    "popper.js": "^1.16.1",
     "rxjs": "^6.5.4",
     "tslib": "^1.10.0",
-    "url-parse": "^1.4.5",
-    "webpack-dev-server": "^3.7.2",
+    "url-parse": "^1.4.7",
+    "webpack-dev-server": "^3.10.3",
     "yargs-parser": "^13.1.2",
     "zone.js": "~0.10.2"
   },
@@ -47,8 +47,8 @@
     "@angular/cli": "^9.0.6",
     "@angular/compiler-cli": "^9.0.6",
     "@angular/language-service": "^9.0.6",
-    "@types/jasmine": "~3.3.5",
-    "@types/jasminewd2": "~2.0.6",
+    "@types/jasmine": "^3.3.16",
+    "@types/jasminewd2": "^2.0.8",
     "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.3.0",
@@ -56,12 +56,12 @@
     "karma": "^4.4.1",
     "karma-chrome-launcher": "~2.2.0",
     "karma-cli": "~2.0.0",
-    "karma-coverage-istanbul-reporter": "^2.0.4",
+    "karma-coverage-istanbul-reporter": "^2.1.1",
     "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.0",
-    "protractor": "^5.4.2",
+    "karma-jasmine-html-reporter": "^1.5.2",
+    "protractor": "^5.4.3",
     "ts-node": "~7.0.1",
-    "tslint": "~5.12.0",
+    "tslint": "^5.12.1",
     "typescript": "^3.7.5"
   }
 }
