--- a/webapp/package.json
+++ b/webapp/package.json
@@ -30,10 +30,13 @@
     "awesome-bootstrap-checkbox": "^1.0.1",
     "bootstrap": "^4.4.1",
     "core-js": "^2.6.11",
+    "fibers": "^4.0.2",
     "font-awesome": "^4.7.0",
+    "html-webpack-plugin": "^3.2.0",
     "jquery": "^3.4.1",
     "minimist": "^1.2.5",
     "moment": "^2.24.0",
+    "node-sass": "^4.13.1",
     "popper.js": "^1.16.1",
     "rxjs": "^6.5.4",
     "tslib": "^1.10.0",
@@ -51,7 +54,7 @@
     "@types/jasminewd2": "^2.0.8",
     "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
-    "jasmine-core": "~3.3.0",
+    "jasmine-core": "^3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "^4.4.1",
     "karma-chrome-launcher": "~2.2.0",
