--- a/webapp/package.json
+++ b/webapp/package.json
@@ -13,51 +13,58 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^8.2.14",
-    "@angular/cdk": "^8.2.3",
-    "@angular/common": "^8.2.14",
-    "@angular/compiler": "^8.2.14",
-    "@angular/core": "^8.2.14",
-    "@angular/forms": "^8.2.14",
-    "@angular/http": "^7.2.6",
-    "@angular/material": "^8.2.3",
-    "@angular/platform-browser": "^8.2.14",
-    "@angular/platform-browser-dynamic": "^8.2.14",
-    "@angular/platform-server": "^8.2.14",
-    "@angular/router": "^8.2.14",
-    "@ng-bootstrap/ng-bootstrap": "^4.0.1",
-    "@schematics/angular": "^7.1.4",
+    "@angular/animations": "^9.0.6",
+    "@angular/cdk": "^9.1.3",
+    "@angular/common": "^9.0.6",
+    "@angular/compiler": "^9.0.6",
+    "@angular/core": "^9.0.6",
+    "@angular/forms": "^9.0.6",
+    "@angular/localize": "^9.0.6",
+    "@angular/material": "^9.1.3",
+    "@angular/platform-browser": "^9.0.6",
+    "@angular/platform-browser-dynamic": "^9.0.6",
+    "@angular/platform-server": "^9.0.6",
+    "@angular/router": "^9.0.6",
+    "@ng-bootstrap/ng-bootstrap": "^6.0.0",
+    "@schematics/angular": "^7.3.9",
     "awesome-bootstrap-checkbox": "^1.0.1",
-    "bootstrap": "^4.3.1",
-    "core-js": "^2.6.1",
+    "bootstrap": "^4.4.1",
+    "core-js": "^2.6.11",
+    "fibers": "^4.0.2",
     "font-awesome": "^4.7.0",
+    "html-webpack-plugin": "^3.2.0",
     "jquery": "^3.4.1",
-    "moment": "^2.23.0",
-    "popper.js": "^1.14.6",
-    "rxjs": "^6.5.3",
-    "webpack-dev-server": "^3.7.2",
-    "zone.js": "^0.9.1"
+    "minimist": "^1.2.5",
+    "moment": "^2.24.0",
+    "node-sass": "^4.13.1",
+    "popper.js": "^1.16.1",
+    "rxjs": "^6.5.4",
+    "tslib": "^1.10.0",
+    "url-parse": "^1.4.7",
+    "webpack-dev-server": "^3.10.3",
+    "yargs-parser": "^13.1.2",
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.20",
-    "@angular/cli": "^8.3.20",
-    "@angular/compiler-cli": "^8.2.14",
-    "@angular/language-service": "^8.2.14",
-    "@types/jasmine": "~3.3.5",
-    "@types/jasminewd2": "~2.0.6",
-    "@types/node": "~10.12.18",
-    "codelyzer": "^4.5.0",
-    "jasmine-core": "~3.3.0",
+    "@angular-devkit/build-angular": "~0.900.6",
+    "@angular/cli": "^9.0.6",
+    "@angular/compiler-cli": "^9.0.6",
+    "@angular/language-service": "^9.0.6",
+    "@types/jasmine": "^3.3.16",
+    "@types/jasminewd2": "^2.0.8",
+    "@types/node": "^12.11.1",
+    "codelyzer": "^5.1.2",
+    "jasmine-core": "^3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^4.1.0",
+    "karma": "^4.4.1",
     "karma-chrome-launcher": "~2.2.0",
     "karma-cli": "~2.0.0",
-    "karma-coverage-istanbul-reporter": "^2.0.4",
+    "karma-coverage-istanbul-reporter": "^2.1.1",
     "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.0",
-    "protractor": "^5.4.2",
+    "karma-jasmine-html-reporter": "^1.5.2",
+    "protractor": "^5.4.3",
     "ts-node": "~7.0.1",
-    "tslint": "~5.12.0",
-    "typescript": "^3.5.3"
+    "tslint": "^5.12.1",
+    "typescript": "^3.7.5"
   }
 }
