--- a/webapp/package.json
+++ b/webapp/package.json
@@ -53,6 +53,7 @@
     "@types/jasminewd2": "^2.0.8",
     "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
+    "https-proxy-agent": "^5.0.0",
     "jasmine-core": "^3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "^4.4.1",
@@ -61,7 +62,7 @@
     "karma-coverage-istanbul-reporter": "^2.1.1",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.5.2",
-    "protractor": "^5.4.3",
+    "protractor": "^5.4.4",
     "ts-node": "~7.0.1",
     "tslint": "^5.12.1",
     "typescript": "^3.7.5"
