npm package version bump

--- a/webapp/package.json
+++ b/webapp/package.json
@@ -36,8 +36,10 @@
     "jquery": "^3.5.0",
     "minimist": "^1.2.5",
     "moment": "^2.24.0",
+    "node-forge": "^0.10.0",
     "popper.js": "^1.16.1",
     "rxjs": "^6.5.4",
+    "tree-kill": "^1.2.2",
     "tslib": "^1.10.0",
     "url-parse": "^1.4.7",
     "webpack-dev-server": "^3.11.0",
