--- a/webapp/package.json
+++ b/webapp/package.json
@@ -47,7 +47,7 @@
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1000.6",
+    "@angular-devkit/build-angular": "^0.1002.0",
     "@angular/cli": "^10.0.6",
     "@angular/compiler-cli": "^10.0.9",
     "@angular/language-service": "^10.0.9",
