--- a/webapp/package.json
+++ b/webapp/package.json
@@ -13,18 +13,18 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^10.0.9",
-    "@angular/cdk": "^9.1.3",
-    "@angular/common": "^10.0.9",
-    "@angular/compiler": "^10.0.9",
-    "@angular/core": "^10.0.9",
-    "@angular/forms": "^10.0.9",
-    "@angular/localize": "^10.0.9",
-    "@angular/material": "^9.1.3",
-    "@angular/platform-browser": "^10.0.9",
-    "@angular/platform-browser-dynamic": "^10.0.9",
-    "@angular/platform-server": "^10.0.9",
-    "@angular/router": "^10.0.9",
+    "@angular/animations": "^10.2.1",
+    "@angular/cdk": "^10.2.6",
+    "@angular/common": "^10.2.1",
+    "@angular/compiler": "^10.2.1",
+    "@angular/core": "^10.2.1",
+    "@angular/forms": "^10.2.1",
+    "@angular/localize": "^10.2.1",
+    "@angular/material": "^10.2.6",
+    "@angular/platform-browser": "^10.2.1",
+    "@angular/platform-browser-dynamic": "^10.2.1",
+    "@angular/platform-server": "^10.2.1",
+    "@angular/router": "^10.2.1",
     "@ng-bootstrap/ng-bootstrap": "^6.0.0",
     "@schematics/angular": "^8.3.29",
     "awesome-bootstrap-checkbox": "^1.0.1",
@@ -38,7 +38,7 @@
     "moment": "^2.24.0",
     "node-forge": "^0.10.0",
     "popper.js": "^1.16.1",
-    "rxjs": "^6.5.4",
+    "rxjs": "^6.6.3",
     "tree-kill": "^1.2.2",
     "tslib": "^1.10.0",
     "url-parse": "^1.4.7",
@@ -48,9 +48,9 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.1002.0",
-    "@angular/cli": "^10.0.6",
-    "@angular/compiler-cli": "^10.0.9",
-    "@angular/language-service": "^10.0.9",
+    "@angular/cli": "^10.2.0",
+    "@angular/compiler-cli": "^10.2.1",
+    "@angular/language-service": "^10.2.1",
     "@types/jasmine": "^3.3.16",
     "@types/jasminewd2": "^2.0.8",
     "@types/node": "^12.11.1",
@@ -68,6 +68,7 @@
     "protractor": "^5.4.4",
     "ts-node": "~7.0.1",
     "tslint": "^5.12.1",
-    "typescript": "^3.9.7"
+    "typescript": "^3.9.7",
+    "webpack-subresource-integrity": "^1.5.1"
   }
 }
