--- a/webapp/package.json
+++ b/webapp/package.json
@@ -25,7 +25,7 @@
     "@angular/platform-browser-dynamic": "^12.0.1",
     "@angular/platform-server": "^12.0.1",
     "@angular/router": "^12.0.1",
-    "@ng-bootstrap/ng-bootstrap": "^11.0.0-beta.1",
+    "@ng-bootstrap/ng-bootstrap": "^10.0.0",
     "@schematics/angular": "^8.3.29",
     "awesome-bootstrap-checkbox": "^1.0.1",
     "bootstrap": "^4.4.1",
