--- a/webapp/package.json
+++ b/webapp/package.json
@@ -19,12 +19,13 @@
     "@angular/compiler": "^12.2.2",
     "@angular/core": "^12.2.2",
     "@angular/forms": "^12.2.2",
-    "@angular/localize": "^12.2.1",
+    "@angular/localize": "^12.2.2",
     "@angular/material": "^12.2.2",
     "@angular/platform-browser": "^12.2.2",
     "@angular/platform-browser-dynamic": "^12.2.2",
     "@angular/platform-server": "^12.2.2",
     "@angular/router": "^12.2.2",
+    "@ng-bootstrap/ng-bootstrap": "^10.0.0",
     "@schematics/angular": "^8.3.29",
     "awesome-bootstrap-checkbox": "^1.0.1",
     "bootstrap": "^4.4.1",
@@ -67,7 +68,7 @@
     "protractor": "^7.0.0",
     "ts-node": "~7.0.1",
     "tslint": "^6.1.3",
-    "typescript": "^4.2.4",
+    "typescript": "^4.3.5",
     "webpack-subresource-integrity": "^1.5.1"
   }
 }
