--- a/webapp/package.json
+++ b/webapp/package.json
@@ -26,7 +26,7 @@
     "@angular/platform-browser-dynamic": "^14.0.5",
     "@angular/platform-server": "^14.0.5",
     "@angular/router": "^14.0.5",
-    "@ng-bootstrap/ng-bootstrap": "^11.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^13.0.0-beta.1",
     "@schematics/angular": "^8.3.29",
     "awesome-bootstrap-checkbox": "^1.0.1",
     "bootstrap": "^4.4.1",
