angular version bump

--- a/webapp/package.json
+++ b/webapp/package.json
@@ -13,19 +13,19 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-devkit/build-angular": "^17.2.0",
-    "@angular/animations": "^17.2.1",
-    "@angular/cdk": "^17.2.0",
-    "@angular/common": "^17.2.1",
-    "@angular/compiler": "^17.2.1",
-    "@angular/core": "^17.2.1",
-    "@angular/forms": "^17.2.1",
-    "@angular/localize": "^17.2.1",
-    "@angular/material": "^17.2.0",
-    "@angular/platform-browser": "^17.2.1",
-    "@angular/platform-browser-dynamic": "^17.2.1",
-    "@angular/platform-server": "^17.2.1",
-    "@angular/router": "^17.2.1",
+    "@angular-devkit/build-angular": "^17.3.1",
+    "@angular/animations": "^17.3.1",
+    "@angular/cdk": "^17.3.1",
+    "@angular/common": "^17.3.1",
+    "@angular/compiler": "^17.3.1",
+    "@angular/core": "^17.3.1",
+    "@angular/forms": "^17.3.1",
+    "@angular/localize": "^17.3.1",
+    "@angular/material": "^17.3.1",
+    "@angular/platform-browser": "^17.3.1",
+    "@angular/platform-browser-dynamic": "^17.3.1",
+    "@angular/platform-server": "^17.3.1",
+    "@angular/router": "^17.3.1",
     "@ng-bootstrap/ng-bootstrap": "^16.0.0",
     "@schematics/angular": "^8.3.29",
     "awesome-bootstrap-checkbox": "^1.0.1",
@@ -39,18 +39,18 @@
     "node-forge": "^1.3.0",
     "popper.js": "^1.16.1",
     "rxjs": "^6.6.6",
+    "terser": ">=5.14.2",
     "tree-kill": "^1.2.2",
     "tslib": "^1.10.0",
     "url-parse": "^1.5.9",
-    "webpack-dev-server": "^4.7.2",
+    "webpack-dev-server": "^4.15.2",
     "yargs-parser": "^13.1.2",
-    "zone.js": "~0.14.2",
-    "terser": ">=5.14.2"
+    "zone.js": "~0.14.2"
   },
   "devDependencies": {
-    "@angular/cli": "^17.2.0",
-    "@angular/compiler-cli": "^17.2.1",
-    "@angular/language-service": "^17.2.1",
+    "@angular/cli": "^17.3.1",
+    "@angular/compiler-cli": "^17.3.1",
+    "@angular/language-service": "^17.3.1",
     "@types/jasmine": "^3.3.16",
     "@types/jasminewd2": "^2.0.8",
     "@types/node": "^12.11.1",
@@ -66,10 +66,11 @@
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.5.2",
     "protractor": "^7.0.0",
+    "terser": ">=5.14.2",
     "ts-node": "~7.0.1",
     "tslint": "^6.1.3",
     "typescript": "^5.2.2",
-    "webpack-subresource-integrity": "^1.5.2",
-    "terser": ">=5.14.2"
+    "selenium-webdriver": "^4.18.1",
+    "webpack-subresource-integrity": "^1.5.2"
   }
 }
