--- a/webapp/package.json
+++ b/webapp/package.json
@@ -13,63 +13,63 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-devkit/build-angular": "^18.2.6",
-    "@angular/animations": "^18.2.6",
-    "@angular/cdk": "^18.2.6",
-    "@angular/common": "^18.2.6",
-    "@angular/compiler": "^18.2.6",
-    "@angular/core": "^18.2.6",
-    "@angular/forms": "^18.2.6",
-    "@angular/localize": "^18.2.6",
-    "@angular/material": "^18.2.6",
-    "@angular/platform-browser": "^18.2.6",
-    "@angular/platform-browser-dynamic": "^18.2.6",
-    "@angular/platform-server": "^18.2.6",
-    "@angular/router": "^18.2.6",
-    "@ng-bootstrap/ng-bootstrap": "^17.0.0",
-    "@schematics/angular": "^8.3.29",
+    "@angular-devkit/build-angular": "^19.2.2",
+    "@angular/animations": "^19.2.2",
+    "@angular/cdk": "^19.2.2",
+    "@angular/common": "^19.2.2",
+    "@angular/compiler": "^19.2.2",
+    "@angular/core": "^19.2.2",
+    "@angular/forms": "^19.2.2",
+    "@angular/localize": "^19.2.2",
+    "@angular/material": "^19.2.2",
+    "@angular/platform-browser": "^19.2.2",
+    "@angular/platform-browser-dynamic": "^19.2.2",
+    "@angular/platform-server": "^19.2.2",
+    "@angular/router": "^19.2.2",
+    "@ng-bootstrap/ng-bootstrap": "^18.0.0",
+    "@schematics/angular": "^19.2.2",
     "awesome-bootstrap-checkbox": "^1.0.1",
     "bootstrap": "^5.0.0",
-    "core-js": "^2.6.11",
+    "core-js": "^3.41.0",
     "font-awesome": "^4.7.0",
-    "html-webpack-plugin": "^4.5.2",
+    "html-webpack-plugin": "^5.6.3",
     "jquery": "^3.5.0",
     "minimist": "^1.2.5",
     "moment": "^2.30.1",
     "node-forge": "^1.3.0",
     "popper.js": "^1.16.1",
-    "rxjs": "^6.6.6",
+    "rxjs": "^7.8.2",
     "terser": ">=5.14.2",
     "tree-kill": "^1.2.2",
     "tslib": "^1.10.0",
     "url-parse": "^1.5.9",
-    "webpack-dev-server": "^4.15.2",
-    "yargs-parser": "^13.1.2",
-    "zone.js": "~0.14.10"
+    "webpack-dev-server": "^5.2.0",
+    "yargs-parser": "^21.1.1",
+    "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular/cli": "^18.2.6",
-    "@angular/compiler-cli": "^18.2.6",
-    "@angular/language-service": "^18.2.6",
-    "@types/jasmine": "^3.3.16",
-    "@types/jasminewd2": "^2.0.8",
-    "@types/node": "^12.11.1",
+    "@angular/cli": "^19.2.2",
+    "@angular/compiler-cli": "^19.2.2",
+    "@angular/language-service": "^19.2.2",
+    "@types/jasmine": "^5.1.7",
+    "@types/jasminewd2": "^2.0.13",
+    "@types/node": "^22.13.10",
     "codelyzer": "^6.0.1",
     "http-proxy": "^1.18.1",
-    "https-proxy-agent": "^5.0.0",
-    "jasmine-core": "^3.5.0",
-    "jasmine-spec-reporter": "~4.2.1",
+    "https-proxy-agent": "^7.0.6",
+    "jasmine-core": "^5.6.0",
+    "jasmine-spec-reporter": "^7.0.0",
     "karma": "^6.3.16",
-    "karma-chrome-launcher": "~2.2.0",
+    "karma-chrome-launcher": "~3.2.0",
     "karma-cli": "~2.0.0",
-    "karma-coverage-istanbul-reporter": "^2.1.1",
-    "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.5.2",
+    "karma-coverage-istanbul-reporter": "^3.0.3",
+    "karma-jasmine": "^5.1.0",
+    "karma-jasmine-html-reporter": "^2.1.0",
     "selenium-webdriver": "^4.18.1",
     "terser": ">=5.14.2",
-    "ts-node": "~7.0.1",
-    "tslint": "^6.1.3",
+    "ts-node": "^10.9.2",
+    "tslint": "^5.20.1",
     "typescript": "^5.5.3",
-    "webpack-subresource-integrity": "^1.5.2"
+    "webpack-subresource-integrity": "^5.2.0-rc.1"
   }
 }
