--- a/webapp/package.json
+++ b/webapp/package.json
@@ -54,7 +54,6 @@
     "@types/jasmine": "^5.1.7",
     "@types/jasminewd2": "^2.0.13",
     "@types/node": "^22.13.10",
-    "codelyzer": "^6.0.1",
     "http-proxy": "^1.18.1",
     "https-proxy-agent": "^7.0.6",
     "jasmine-core": "^5.6.0",
@@ -71,5 +70,10 @@
     "tslint": "^5.20.1",
     "typescript": "^5.5.3",
     "webpack-subresource-integrity": "^5.2.0-rc.1"
+  },
+  "overrides": {
+    "@angular-devkit/build-angular": {
+      "http-proxy-middleware": "^3.0.5"
+    }
   }
 }
