--- a/webapp/package.json
+++ b/webapp/package.json
@@ -13,7 +13,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-devkit/build-angular": "^19.2.8",
+    "@angular-devkit/build-angular": "^20.0.1",
     "@angular/animations": "^20.0.2",
     "@angular/cdk": "^20.0.2",
     "@angular/common": "^20.0.2",
@@ -26,8 +26,8 @@
     "@angular/platform-browser-dynamic": "^20.0.2",
     "@angular/platform-server": "^20.0.2",
     "@angular/router": "^20.0.2",
-    "@ng-bootstrap/ng-bootstrap": "^18.0.0",
-    "@schematics/angular": "^19.2.2",
+    "@ng-bootstrap/ng-bootstrap": "^19.0.0-rc.0",
+    "@schematics/angular": "^20.0.1",
     "awesome-bootstrap-checkbox": "^1.0.1",
     "bootstrap": "^5.0.0",
     "core-js": "^3.41.0",
@@ -41,14 +41,14 @@
     "rxjs": "^7.8.2",
     "terser": ">=5.14.2",
     "tree-kill": "^1.2.2",
-    "tslib": "^1.10.0",
+    "tslib": "^2.8.1",
     "url-parse": "^1.5.9",
     "webpack-dev-server": "^5.2.0",
-    "yargs-parser": "^21.1.1",
+    "yargs-parser": "^22.0.0",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular/cli": "^19.2.2",
+    "@angular/cli": "^20.0.1",
     "@angular/compiler-cli": "^20.0.2",
     "@angular/language-service": "^20.0.2",
     "@types/jasmine": "^5.1.7",
