--- a/webapp/package.json
+++ b/webapp/package.json
@@ -39,13 +39,13 @@
     "node-forge": "^1.3.0",
     "popper.js": "^1.16.1",
     "rxjs": "^7.8.2",
-    "terser": ">=5.14.2",
+    "terser": "^5.14.2",
     "tree-kill": "^1.2.2",
     "tslib": "^2.8.1",
     "url-parse": "^1.5.9",
     "webpack-dev-server": "^5.2.0",
     "yargs-parser": "^22.0.0",
-    "zone.js": "~0.15.0"
+    "zone.js": "^0.15.0"
   },
   "devDependencies": {
     "@angular/cli": "^20.3.0",
@@ -59,13 +59,13 @@
     "jasmine-core": "^5.6.0",
     "jasmine-spec-reporter": "^7.0.0",
     "karma": "^6.3.16",
-    "karma-chrome-launcher": "~3.2.0",
-    "karma-cli": "~2.0.0",
+    "karma-chrome-launcher": "^3.2.0",
+    "karma-cli": "^2.0.0",
     "karma-coverage-istanbul-reporter": "^3.0.3",
     "karma-jasmine": "^5.1.0",
     "karma-jasmine-html-reporter": "^2.1.0",
     "selenium-webdriver": "^4.18.1",
-    "terser": ">=5.14.2",
+    "terser": "^5.14.2",
     "ts-node": "^10.9.2",
     "tslint": "^5.20.1",
     "typescript": "^5.5.3",
