--- a/webapp/tsconfig.json
+++ b/webapp/tsconfig.json
@@ -5,15 +5,11 @@
     "sourceMap": true,
     "esModuleInterop": true,
     "declaration": false,
-    "moduleResolution": "node",
+    "moduleResolution": "bundler",
     "experimentalDecorators": true,
     "target": "ES2022",
     "typeRoots": [
       "node_modules/@types"
-    ],
-    "lib": [
-      "ES2022",
-      "dom"
     ],
     "module": "esnext",
     "baseUrl": "./",
