--- a/webapp/package.json
+++ b/webapp/package.json
@@ -26,7 +26,7 @@
     "@angular/platform-browser-dynamic": "^21.0.1",
     "@angular/platform-server": "^21.0.1",
     "@angular/router": "^21.0.1",
-    "@ng-bootstrap/ng-bootstrap": "^19.0.0-rc.0",
+    "@ng-bootstrap/ng-bootstrap": "^20.0.0",
     "@schematics/angular": "^21.0.1",
     "awesome-bootstrap-checkbox": "^1.0.1",
     "bootstrap": "^5.0.0",
